Resolve #13: Поддержка поиска по полному наименованию компании

--- a/src/autokad/styles/autokad.less
+++ b/src/autokad/styles/autokad.less
@@ -38,11 +38,17 @@
 [np-autokad] .filters {
     padding: 10px 0;
 }
-[np-autokad] .filters .span3 {
-    width: 175px;
+[np-autokad] .filters .source-filter.span-x,
+[np-autokad] .filters .source-filter .span-x  {
+    width: 215px;
 }
-[np-autokad] .filters .span2 {
-    width: 135px;
+[np-autokad] .filters .period-filter.span-x,
+[np-autokad] .filters .period-filter .span-x {
+    width: 125px;
+}
+[np-autokad] .filters .case-type-filter.span-x,
+[np-autokad] .filters .case-type-filter .span-x {
+    width: 160px;
 }
 [np-autokad] .filters .search-header {
     margin-top: 5px;
