Resolve #19: Поддержка HTML-результата от kad.arbitr.ru

--- a/src/autokad/styles/autokad.less
+++ b/src/autokad/styles/autokad.less
@@ -126,7 +126,9 @@
     background-color: #ffff00;
 }
 
-[np-autokad] .search-result .participant-name {
+[np-autokad] .search-result .participant-name,
+[np-autokad] .search-result .participant-address,
+[np-autokad] .search-result .participant-inn {
     display: block;
 }
 [np-autokad] .search-result .participant-more-info {
